Fix Get Support sub menu auto click on mobile

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -82,7 +82,14 @@ $menu-sub-highlight: #bdc3c7;
 
   div {
 
+    &:hover {
+      .support-sub-menu {
+        display: block;
+      }
+    }
+
     span {
+      padding: 20px 0;
       @include transition-property(color);
       @include transition-duration(.25s);
       @include transition-timing-function(linear);
@@ -97,9 +104,6 @@ $menu-sub-highlight: #bdc3c7;
     }
 
     &:hover {
-      .support-sub-menu {
-        display: block;
-      }
 
       span {
         color: $accent;
@@ -112,6 +116,7 @@ $menu-sub-highlight: #bdc3c7;
 .support-sub-menu {
   display: none;
   position: absolute;
+  top: 34px;
   left: -12px;
   right: 0;
   background-color: white;
@@ -322,6 +327,7 @@ $menu-sub-highlight: #bdc3c7;
       color: white;
       font-size: 45px;
       font-weight: 100;
+      line-height: 1.3;
       margin-top: 0;
 
       @include breakpoint(small only){
